fix: update heading sizes for improved visibility in Form, About, and Services components; adjust letter-spacing in global styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -119,7 +119,7 @@ body {
 .home-title {
   font-family: 'Ballmer', sans-serif;
   font-weight: 400;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.7px;
 }
 
 body {
@@ -132,19 +132,12 @@ button {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  letter-spacing: -0.35px;
-}
-
-section h2 {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  letter-spacing: -0.5px;
+  font-family: 'Karla', Arial, Helvetica, sans-serif sans-serif;
+  font-weight: 300;
 }
 
 #services p {
-  font-family: 'Lora', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-style: italic;
 }
 /* Animations */
